[metadata]
name = ipoptdriver
version = 0.9
summary = A wrapper for the Ipopt optimization code
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = Herb Schilling
author-email = hschilling@nasa.gov
maintainer = Herb Schilling
maintainer-email = hschilling@nasa.gov
license = NASA Open Source Agreement (NOSA) Version 1.3
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = Ipopt library from https://projects.coin-or.org/Ipopt and its Python wrapper, Pyipopt from http://code.google.com/p/pyipopt/
project-url = http://openmdao.org

[openmdao]
copyright = 
static_path = [ '_static' ]

