[metadata]
name = nastranwrapper
version = 0.9
summary = 
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = Andrew Rodriguez
author-email = 
maintainer = Herb Schilling
maintainer-email = hschilling@nasa.gov
license = NASA Open Source Agreement (NOSA) Version 1.3
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = MSC Nastran
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]
